[package]
name = "schnorrkel-napi"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "1.0"
napi-derive = "1.0"
schnorrkel = { package = "schnorrkel-wrapper", path = "../schnorrkel-wrapper" }

[build-dependencies]
napi-build = "1.0"
