[package]
name = "schnorrkel-wasm"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
schnorrkel = { package = "schnorrkel-wrapper", path = "../schnorrkel-wrapper" }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']
