[package]
name = "schnorrkel-wrapper"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"

[dependencies]
schnorrkel = { version = "0.9.1", features = ["wasm-bindgen"] }
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# schnorrkel = { version = "0.9.1", features = ["wasm-bindgen"] }
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# schnorrkel = { version = "0.9.1", features = ["wasm-bindgen", "asm", "u64_backend", "avx2_backend"] }
